src/instance.h

typedef struct {
  bool own_ctx_on_success;
  bool own_ctx_on_failure;
} PolyInstanceOptions;
typedef struct {
  int code;
  const char *func;
  char message[256];
} PolyInstanceError;
typedef struct {
  const char *name;
  int role;
  PolyTensor *tensor;
  uint32_t flags;
} PolyBindingSpec;
typedef struct {
  const char *name;
  const char **inputs;
  int n_inputs;
  const char **outputs;
  int n_outputs;
  const char *objective;
  uint32_t flags;
} PolyEntrypointSpec;
/* Execution */

/* Typed I/O binding for forward/train calls. The Instance input schema owns
 * shape/dtype; each call supplies an exact byte representation and the dtype
 * id is validated before the named BUFFER is mutated. */
typedef struct {
  const char *name;
  const void *data;
  size_t nbytes;
  int dtype_id;
} PolyIOBinding;