src/frontend.h

/* Public C/frontend ABI version. Bump when exported symbols or public struct
 * layouts used by frontends change. */
#define POLYGRAD_ABI_VERSION 57
/* Pinned tinygrad uop/ops.py `resolve`: simplify a boolean UOp, return its
 * proven value when constant, otherwise the caller-provided default. */
int poly_uop_resolve(PolyCtx *ctx, PolyUOp *u, int default_value);
/* FFI-safe UOp construction helpers used by tinygrad-style custom kernels.
 * These only build UOps; execution still flows through normal CALL scheduling. */
PolyUOp *poly_uop_placeholder_like(PolyCtx *ctx, PolyUOp *like, int slot);
PolyUOp *poly_uop_range(PolyCtx *ctx, int64_t bound, int64_t axis_id, int axis_type);
PolyUOp *poly_uop_index(
    PolyCtx *ctx,
    PolyUOp *base,
    PolyUOp **indices,
    int n_indices,
    int keep_ptr
);
PolyUOp *poly_uop_load(PolyCtx *ctx, PolyUOp *addr);
PolyUOp *poly_uop_store(PolyCtx *ctx, PolyUOp *addr, PolyUOp *value);
PolyUOp *poly_uop_set(PolyCtx *ctx, PolyUOp *addr, PolyUOp *value, PolyUOp **ranges, int n_ranges);
PolyUOp *poly_uop_group(PolyCtx *ctx, PolyUOp **srcs, int n_src);
PolyUOp *poly_uop_end(PolyCtx *ctx, PolyUOp *body, PolyUOp **ranges, int n_ranges);
PolyUOp *poly_uop_sink(PolyCtx *ctx, PolyUOp **srcs, int n_src);
PolyUOp *poly_uop_sink_ex(PolyCtx *ctx, PolyUOp **srcs, int n_src, const char *name, int optimize);
PolyUOp *poly_uop_call(PolyCtx *ctx, PolyUOp *body, PolyUOp **args, int n_args);
PolyUOp *poly_uop_after(PolyCtx *ctx, PolyUOp *target, PolyUOp *effect);
PolyUOp *poly_uop_reduce(
    PolyCtx *ctx,
    PolyOps reduce_op,
    PolyUOp *expr,
    PolyUOp **ranges,
    int n_ranges
);
PolyUOp *poly_uop_flatten(PolyCtx *ctx, PolyUOp *u);
/* FFI capability probe. Builds a representative tensor graph for `op` and
 * `shape`, then asks the selected backend to lower it. Returns 1 for supported,
 * 0 for unsupported, and a negative value for an invalid/too-large query.
 *
 * Shape conventions:
 * - elementwise/unary/reduce/qr/cholesky: input shape
 * - matmul/dot: [m, k, n] for (m,k) @ (k,n)
 * - triangular_solve/solve: [n, n] for vector RHS or [n, n, nrhs]
 * - lstsq: [m, n] for vector RHS or [m, n, nrhs]
 */
int poly_can_run_op(
    PolyCtx *ctx,
    int device_id,
    const char *op,
    int dtype_id,
    const int64_t *shape,
    int n_shape
);