py/polygrad/_ffi.py

"""
ctypes bindings to libpolygrad.so. The bound surface is the public C ABI:
frontend helpers, tensor/UOp helpers, schedulers, and instance/model entrypoints.

Library is loaded lazily on first call to get_lib(). Module-level globals
(_lib, OPS, _has_cuda_ffi) are populated atomically by get_lib().
"""

import ctypes
import ctypes.util
import os
import platform
import sys

# --- Module-level state (populated by get_lib()) ---
_lib = None
OPS = {}
_has_cuda_ffi = False
POLYGRAD_ABI_VERSION = 57

# --- Opaque pointer type (always available) ---
_ptr = ctypes.c_void_p
_ptrp = ctypes.POINTER(_ptr)
_i64p = ctypes.POINTER(ctypes.c_int64)
_ip = ctypes.POINTER(ctypes.c_int)
_uintptr = ctypes.c_size_t


# --- Structures (always available, no _lib dependency) ---

class PolyVarBinding(ctypes.Structure):
    _fields_ = [('var', _ptr), ('value', ctypes.c_int32)]

class PolyBuffer(ctypes.Structure):
    _fields_ = [
        ('ptr', _ptr),
        ('nbytes', ctypes.c_size_t),
        ('device', ctypes.c_int),    # PolyDevice
        ('owned', ctypes.c_bool),
        ('allocator', _ptr),
        ('src', _ptr),
        ('valid', ctypes.c_bool),
        ('frontend_release', _ptr),
        ('memory_accounted', ctypes.c_bool),
        ('memory_device', ctypes.c_int),
        ('device_uop', _ptr),
        ('memory_device_uop', _ptr),
    ]

class PolyIOBinding(ctypes.Structure):
    _fields_ = [('name', ctypes.c_char_p),
                ('data', ctypes.c_void_p),
                ('nbytes', ctypes.c_size_t),
                ('dtype_id', ctypes.c_int)]

class PolyDType(ctypes.Structure):
    _fields_ = [
        ('priority', ctypes.c_int8),
        ('bitsize', ctypes.c_uint16),
        ('name', ctypes.c_char_p),
        ('fmt', ctypes.c_char),
        ('count', ctypes.c_uint16),
        ('is_ptr', ctypes.c_bool),
        ('addrspace', ctypes.c_int),
        ('vcount', ctypes.c_uint16),
        ('ptr_size', ctypes.c_int64),
    ]

class PolyOptimConfig(ctypes.Structure):
    _fields_ = [
        ('kind', ctypes.c_int),
        ('beta1', ctypes.c_double),
        ('beta2', ctypes.c_double),
        ('eps', ctypes.c_double),
        ('weight_decay', ctypes.c_double),
        ('momentum', ctypes.c_double),
        ('nesterov', ctypes.c_bool),
        ('classic', ctypes.c_bool),
    ]

class PolyCtxStats(ctypes.Structure):
    _fields_ = [
        ('arena_bytes', ctypes.c_size_t),
        ('arena_high_water', ctypes.c_size_t),
        ('scratch_bytes', ctypes.c_size_t),
        ('scratch_high_water', ctypes.c_size_t),
        ('cse_entries', ctypes.c_size_t),
        ('schedule_cache_entries', ctypes.c_size_t),
        ('to_program_cache_entries', ctypes.c_size_t),
        ('runtime_cache_entries', ctypes.c_size_t),
        ('program_cache_entries', ctypes.c_size_t),
        ('shape_cache_entries', ctypes.c_size_t),
        ('buffer_entries', ctypes.c_size_t),
        ('buffer_owned_bytes', ctypes.c_size_t),
        ('buffer_owned_current_bytes', ctypes.c_size_t),
        ('buffer_owned_source_bytes', ctypes.c_size_t),
        ('tensor_records', ctypes.c_size_t),
        ('registry_entries', ctypes.c_size_t),
        ('entrypoint_entries', ctypes.c_size_t),
        ('compiled_artifact_bytes', ctypes.c_size_t),
        ('runtime_artifact_entries', ctypes.c_size_t),
        ('launch_count', ctypes.c_size_t),
        ('schedule_cache_hits', ctypes.c_size_t),
        ('schedule_cache_misses', ctypes.c_size_t),
        ('runtime_cache_hits', ctypes.c_size_t),
        ('runtime_cache_misses', ctypes.c_size_t),
        ('buffer_read_count', ctypes.c_size_t),
        ('buffer_read_bytes', ctypes.c_size_t),
        ('buffer_write_count', ctypes.c_size_t),
        ('buffer_write_bytes', ctypes.c_size_t),
        ('buffer_copy_count', ctypes.c_size_t),
        ('buffer_copy_bytes', ctypes.c_size_t),
        ('global_ops', ctypes.c_uint64),
        ('global_mem', ctypes.c_uint64),
        ('time_sum_s', ctypes.c_double),
        ('kernel_count', ctypes.c_uint64),
        ('mem_used', ctypes.c_uint64),
    ]

class PolyInstanceOptions(ctypes.Structure):
    _fields_ = [
        ('own_ctx_on_success', ctypes.c_bool),
        ('own_ctx_on_failure', ctypes.c_bool),
    ]

class PolyInstanceError(ctypes.Structure):
    _fields_ = [
        ('code', ctypes.c_int),
        ('func', ctypes.c_char_p),
        ('message', ctypes.c_char * 256),
    ]

class PolyBindingSpec(ctypes.Structure):
    _fields_ = [
        ('name', ctypes.c_char_p),
        ('role', ctypes.c_int),
        ('tensor', _ptr),
        ('flags', ctypes.c_uint32),
    ]

class PolyEntrypointSpec(ctypes.Structure):
    _fields_ = [
        ('name', ctypes.c_char_p),
        ('inputs', ctypes.POINTER(ctypes.c_char_p)),
        ('n_inputs', ctypes.c_int),
        ('outputs', ctypes.POINTER(ctypes.c_char_p)),
        ('n_outputs', ctypes.c_int),
        ('objective', ctypes.c_char_p),
        ('flags', ctypes.c_uint32),
    ]

PolyFrontendBufferReleaseFn = ctypes.CFUNCTYPE(None, _uintptr)


# --- Library discovery ---

def _find_lib():
    """Find libpolygrad shared library. Returns path or None."""
    # 1. POLYGRAD_LIB env var (explicit override)
    env_path = os.environ.get('POLYGRAD_LIB')
    if env_path and os.path.isfile(env_path):
        return env_path

    # 2. Installed _native extension module (pip install)
    # Scan package directory directly to avoid circular import
    # (find_spec('polygrad._native') would trigger polygrad.__init__)
    import importlib.machinery
    this_dir = os.path.dirname(os.path.abspath(__file__))
    for suffix in importlib.machinery.EXTENSION_SUFFIXES:
        native_path = os.path.join(this_dir, '_native' + suffix)
        if os.path.isfile(native_path):
            return native_path

    # 3. Development layout (relative to this file)
    this_dir = os.path.dirname(os.path.abspath(__file__))
    system = platform.system()

    if system == 'Darwin':
        lib_name = 'libpolygrad.dylib'
    else:
        lib_name = 'libpolygrad.so'

    search_paths = [
        os.path.join(this_dir, lib_name),
        os.path.join(this_dir, '..', '..', 'build', lib_name),
    ]

    for path in search_paths:
        resolved = os.path.abspath(path)
        if os.path.isfile(resolved):
            return resolved

    # 4. System library path
    found = ctypes.util.find_library('polygrad')
    if found:
        return found

    return None


# --- Signature declaration helpers ---

def _unary(lib, name):
    fn = getattr(lib, name)
    fn.restype = _ptr
    fn.argtypes = [_ptr, _ptr]

def _unary_d(lib, name):
    fn = getattr(lib, name)
    fn.restype = _ptr
    fn.argtypes = [_ptr, _ptr, ctypes.c_double]

def _unary_dd(lib, name):
    fn = getattr(lib, name)
    fn.restype = _ptr
    fn.argtypes = [_ptr, _ptr, ctypes.c_double, ctypes.c_double]

def _binary(lib, name):
    fn = getattr(lib, name)
    fn.restype = _ptr
    fn.argtypes = [_ptr, _ptr, _ptr]


def _declare_signatures(lib):
    """Declare all ctypes argtypes/restype on the loaded library."""

    _u8p = ctypes.POINTER(ctypes.c_uint8)
    _fp = ctypes.POINTER(ctypes.c_float)

    # --- Context ---
    lib.poly_ctx_new.restype = _ptr
    lib.poly_ctx_new.argtypes = []

    lib.poly_ctx_destroy.restype = None
    lib.poly_ctx_destroy.argtypes = [_ptr]

    lib.poly_ctx_set_preferred_device.restype = None
    lib.poly_ctx_set_preferred_device.argtypes = [_ptr, ctypes.c_int]

    try:
        lib.poly_ctx_set_frontend_buffer_release.restype = None
        lib.poly_ctx_set_frontend_buffer_release.argtypes = [_ptr, PolyFrontendBufferReleaseFn]
    except AttributeError:
        pass

    lib.poly_device_by_name.restype = ctypes.c_int
    lib.poly_device_by_name.argtypes = [ctypes.c_char_p]

    lib.poly_device_name.restype = ctypes.c_char_p
    lib.poly_device_name.argtypes = [ctypes.c_int]

    lib.poly_uop_device_name.restype = ctypes.c_char_p
    lib.poly_uop_device_name.argtypes = [_ptr, _ptr]

    lib.poly_uop_resolve.restype = ctypes.c_int
    lib.poly_uop_resolve.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_device_can_execute.restype = ctypes.c_bool
    lib.poly_device_can_execute.argtypes = [ctypes.c_int]

    lib.poly_device_is_host_addressable.restype = ctypes.c_bool
    lib.poly_device_is_host_addressable.argtypes = [ctypes.c_int]

    lib.poly_ctx_named_count.restype = ctypes.c_int
    lib.poly_ctx_named_count.argtypes = [_ptr]

    lib.poly_ctx_stats.restype = ctypes.c_int
    lib.poly_ctx_stats.argtypes = [_ptr, ctypes.POINTER(PolyCtxStats)]

    lib.poly_ctx_reset_counters.restype = None
    lib.poly_ctx_reset_counters.argtypes = [_ptr]

    lib.poly_ctx_mem_used_for_device.restype = ctypes.c_uint64
    lib.poly_ctx_mem_used_for_device.argtypes = [_ptr, ctypes.c_int]

    lib.poly_can_run_op.restype = ctypes.c_int
    lib.poly_can_run_op.argtypes = [_ptr, ctypes.c_int, ctypes.c_char_p, ctypes.c_int, ctypes.POINTER(ctypes.c_int64), ctypes.c_int]

    # --- Op helpers ---
    lib.poly_op_count.restype = ctypes.c_int
    lib.poly_op_count.argtypes = []

    lib.poly_op_name.restype = ctypes.c_char_p
    lib.poly_op_name.argtypes = [ctypes.c_int]

    lib.poly_dtype_count.restype = ctypes.c_int
    lib.poly_dtype_count.argtypes = []

    lib.poly_dtype_id_by_name.restype = ctypes.c_int
    lib.poly_dtype_id_by_name.argtypes = [ctypes.c_char_p]

    # --- Frontend helpers (frontend.h) ---
    lib.poly_const_float.restype = _ptr
    lib.poly_const_float.argtypes = [_ptr, ctypes.c_double]

    lib.poly_const_double.restype = _ptr
    lib.poly_const_double.argtypes = [_ptr, ctypes.c_double]

    lib.poly_const_int.restype = _ptr
    lib.poly_const_int.argtypes = [_ptr, ctypes.c_int64]

    lib.poly_contiguous.restype = _ptr
    lib.poly_contiguous.argtypes = [_ptr, _ptr]

    lib.poly_alu1.restype = _ptr
    lib.poly_alu1.argtypes = [_ptr, ctypes.c_int, _ptr]

    lib.poly_alu2.restype = _ptr
    lib.poly_alu2.argtypes = [_ptr, ctypes.c_int, _ptr, _ptr]

    lib.poly_alu3.restype = _ptr
    lib.poly_alu3.argtypes = [_ptr, ctypes.c_int, _ptr, _ptr, _ptr]

    lib.poly_store_val.restype = _ptr
    lib.poly_store_val.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_sink1.restype = _ptr
    lib.poly_sink1.argtypes = [_ptr, _ptr]

    lib.poly_sink_n.restype = _ptr
    lib.poly_sink_n.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_placeholder_like.restype = _ptr
    lib.poly_uop_placeholder_like.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_uop_range.restype = _ptr
    lib.poly_uop_range.argtypes = [_ptr, ctypes.c_int64, ctypes.c_int64, ctypes.c_int]

    lib.poly_uop_index.restype = _ptr
    lib.poly_uop_index.argtypes = [_ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.c_int]

    lib.poly_uop_load.restype = _ptr
    lib.poly_uop_load.argtypes = [_ptr, _ptr]

    lib.poly_uop_store.restype = _ptr
    lib.poly_uop_store.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_uop_set.restype = _ptr
    lib.poly_uop_set.argtypes = [_ptr, _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_group.restype = _ptr
    lib.poly_uop_group.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_end.restype = _ptr
    lib.poly_uop_end.argtypes = [_ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_sink.restype = _ptr
    lib.poly_uop_sink.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_sink_ex.restype = _ptr
    lib.poly_uop_sink_ex.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.c_char_p, ctypes.c_int]

    lib.poly_uop_call.restype = _ptr
    lib.poly_uop_call.argtypes = [_ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_after.restype = _ptr
    lib.poly_uop_after.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_uop_reduce.restype = _ptr
    lib.poly_uop_reduce.argtypes = [_ptr, ctypes.c_int, _ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_uop_flatten.restype = _ptr
    lib.poly_uop_flatten.argtypes = [_ptr, _ptr]
